# rust-cli-sqlite

./: Cargo.toml  HateCrimesDB.db  Makefile  README.md  main.py  requirements.txt  test_main.py
.github/workflows/: rust_build.yml  rust_build_release.yml  rust_ci.yml  rust_lint.yml  rust_test.yml
mylib/: extract.py  query.py  transform_load.py
src/: lib.rs  main.rs
tests/: test.rs
