[package]
name = "rust-cli-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
rusqlite = "0.25.0"

[[bin]]
name = "rust-cli-sqlite"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/test.rs"